基础地图组件以及地图工具组件的开发

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,10 @@
+<!--
+ * @Author: 周祥毅
+ * @Date: 2020-03-02 17:09:27
+ * @LastEditors: 周祥毅
+ * @LastEditTime: 2020-03-04 19:18:08
+ * @Description: 
+ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,6 +13,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      body{
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <noscript>
