天气，定位组件

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
  * @Author: 周祥毅
  * @Date: 2020-03-02 17:09:27
  * @LastEditors: 周祥毅
- * @LastEditTime: 2020-03-04 19:18:08
+ * @LastEditTime: 2020-03-05 11:54:46
  * @Description: 
  -->
 <!DOCTYPE html>
@@ -13,12 +13,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=74fa0b0f559ed138632e08c52f1a9ed9"></script>
     <style>
       body{
         margin: 0;
       }
     </style>
   </head>
+ 
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
